--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^2.1.31",
     "gatsby-image": "^2.0.33",
     "gatsby-mdx": "^0.4.3",
+    "gatsby-plugin-lodash": "^3.0.5",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.9",
@@ -22,6 +23,7 @@
     "gatsby-source-filesystem": "^2.0.24",
     "gatsby-transformer-remark": "^2.3.4",
     "gatsby-transformer-sharp": "^2.1.17",
+    "lodash": "^4.17.11",
     "mdx-utils": "0.0.2",
     "prism-react-renderer": "^0.1.6",
     "prop-types": "^15.7.2",
